# security_crypto_framework

./: BUILD.gn  README.en.md  README.md  README_zh.md  bundle.json  cfi_blocklist.txt
ani/: BUILD.gn  arktsconfig.json
ani/api/: @ohos.base.d.ets  @ohos.security.cryptoFramework.d.ets
ani/ets/: @ohos.security.cryptoFramework.ets  cryptoframework_ani.ets
ani/src/: cryptoframework_ani.cpp
ani/src/cpp/: cryptoframework_ani.cpp
ani/test/: arktsconfig.json  test.ets
common/: BUILD.gn  common.gni
common/inc/: config.h  fwk_class.h  hcf_parcel.h  hcf_string.h  log.h  memory.h  params_parser.h  utils.h
common/src/: asy_key_params.c  big_int.c  blob.c  hcf_parcel.c  hcf_string.c  log.c  memory.c  object_base.c  params_parser.c  utils.c
frameworks/: BUILD.gn  frameworks.gni
frameworks/api_metrics/js/include/: js_api_metrics.h
frameworks/api_metrics/js/src/: js_api_metrics.cpp
frameworks/api_metrics/native/include/: native_api_metrics.h
frameworks/api_metrics/native/src/: native_api_metrics.cpp
frameworks/certificate/: cert_chain_validator.c  x509_certificate.c  x509_crl.c
frameworks/cj/: BUILD.gn
frameworks/cj/include/: asy_key_generator_impl.h  asy_key_spec_generator_impl.h  cipher_impl.h  crypto_ffi.h  dh_key_util_impl.h  ecc_key_util_impl.h  kdf_impl.h  key_agreement_impl.h  key_impl.h  key_pair_impl.h  mac_impl.h  md_impl.h  pri_key_impl.h  pub_key_impl.h  random_impl.h  sign_impl.h  sm2_crypto_util_impl.h  sym_key_generator_impl.h  sym_key_impl.h  verify_impl.h
frameworks/cj/src/: asy_key_generator_impl.cpp  asy_key_spec_generator_impl.cpp  cipher_impl.cpp  cipher_impl.h  crypto_ffi.cpp  crypto_ffi.h  crypto_log.h  crypto_mock.cpp  crypto_utils.cpp  crypto_utils.h  dh_key_util_impl.cpp  ecc_key_util_impl.cpp  kdf_impl.cpp  key_agreement_impl.cpp  key_impl.cpp  key_impl.h  key_pair_impl.cpp  mac_impl.cpp  mac_impl.h  md_impl.cpp  md_impl.h  pri_key_impl.cpp  pub_key_impl.cpp  random_impl.cpp  random_impl.h  sign_impl.cpp  sign_impl.h  sm2_crypto_util_impl.cpp  sym_key_generator_impl.cpp  sym_key_impl.cpp  symkey_generator_impl.cpp  symkey_generator_impl.h  symkey_impl.cpp  symkey_impl.h  verify_impl.cpp
frameworks/crypto_operation/: cipher.c  crypto_operation_err.c  kdf.c  kem.c  key_agreement.c  mac.c  md.c  rand.c  signature.c  sm2_crypto_util.c  sm2_ec_signature_data.c
frameworks/js/ani/: BUILD.gn
frameworks/js/ani/dts/: cert.d.ts  cryptoFramework.d.ts
frameworks/js/ani/ets/: @ohos.security.cryptoFramework.ets
frameworks/js/ani/idl/: ohos.security.cryptoFramework.cryptoFramework.taihe
frameworks/js/ani/inc/: ani_asy_key_generator.h  ani_asy_key_generator_by_spec.h  ani_cipher.h  ani_common.h  ani_dh_key_util.h  ani_ecc_key_util.h  ani_kdf.h  ani_kem.h  ani_key.h  ani_key_agreement.h  ani_key_pair.h  ani_mac.h  ani_md.h  ani_pri_key.h  ani_pub_key.h  ani_rand.h  ani_sign.h  ani_signature_utils.h  ani_sm2_crypto_util.h  ani_sym_key.h  ani_sym_key_generator.h  ani_verify.h
frameworks/js/ani/src/: ani_asy_key_generator.cpp  ani_asy_key_generator_by_spec.cpp  ani_cipher.cpp  ani_common.cpp  ani_constructor.cpp  ani_dh_key_util.cpp  ani_ecc_key_util.cpp  ani_kdf.cpp  ani_kem.cpp  ani_key.cpp  ani_key_agreement.cpp  ani_key_pair.cpp  ani_mac.cpp  ani_md.cpp  ani_pri_key.cpp  ani_pub_key.cpp  ani_rand.cpp  ani_sign.cpp  ani_signature_utils.cpp  ani_sm2_crypto_util.cpp  ani_sym_key.cpp  ani_sym_key_generator.cpp  ani_verify.cpp  cryptoframework_ani.cpp
frameworks/js/ani/test/: arktsconfig.json  build_test.sh  test.ets  test_asy_key_generator.ets  test_asy_key_generator_by_spec.ets  (+14 more)
frameworks/js/jsi/: BUILD.gn
frameworks/key/: asy_key_generator.c  dh_key_util.c  ecc_key_util.c  key_utils.c  sym_key_generator.c
frameworks/native/: BUILD.gn
frameworks/native/include/: native_common.h
frameworks/native/src/: asym_key.c  crypto_asym_cipher.c  crypto_common.c  crypto_kdf.c  crypto_key_agreement.c  crypto_mac.c  crypto_rand.c  digest.c  native_common.c  signature.c  sym_cipher.c  sym_key.c
frameworks/rand/: rand.c
frameworks/spi/: asy_key_generator_spi.h  cert_chain_validator_spi.h  cipher_factory_spi.h  dh_key_util_spi.h  ecc_key_util_spi.h  kdf_spi.h  kem_spi.h  key_agreement_spi.h  mac_spi.h  md_spi.h  rand_spi.h  signature_spi.h  sym_key_factory_spi.h  x509_certificate_spi.h  x509_crl_spi.h
plugin/: BUILD.gn  openssl_plugin.map  plugin.gni
plugin/mbedtls_plugin/common/: mbedtls_common.h
test/unittest/: BUILD.gn
test/unittest/include/: aes_common.h  alg_25519_common_param_spec.h  ecc_asy_key_common.h  ecc_common.h  ecc_common_param_spec.h  hex_utils.h  memory_mock.h  mock.h  openssl_adapter_mock.h  rsa_common_param_spec.h  sm4_common.h  sym_algorithm_common.h
test/unittest/src/: alg_25519_common_param_spec.c  crypto_3des_cipher_test.cpp  crypto_aead_param_spec_test.cpp  crypto_aes_cipher_test.cpp  crypto_api_metrics_test.cpp  crypto_asy_key_convert_pem_test.cpp  crypto_asy_key_generator_cov_test.cpp  crypto_asym_key_cov_test.cpp  crypto_brainpool_asy_key_generator_test.cpp  crypto_brainpool_key_agreement_test.cpp  crypto_brainpool_no_length_sign_test.cpp  crypto_brainpool_no_length_verify_test.cpp  crypto_chacha20_cipher_test.cpp  crypto_cmac_test.cpp  crypto_common_cov_test.cpp  crypto_dh_asy_key_generator_by_spec_test.cpp  crypto_dh_asy_key_generator_test.cpp  crypto_dh_key_agreement_test.cpp  crypto_dsa_asy_key_generator_by_spec_test.cpp  crypto_dsa_asy_key_generator_test.cpp  crypto_dsa_exception_test.cpp  crypto_dsa_sign_test.cpp  crypto_dsa_verify_test.cpp  crypto_ecc_asy_key_generator_by_spec_test.cpp  crypto_ecc_asy_key_generator_test.cpp  crypto_ecc_key_agreement_by_spec_test.cpp  crypto_ecc_key_agreement_test.cpp  crypto_ecc_key_util_test.cpp  crypto_ecc_no_length_sign_test.cpp  crypto_ecc_no_length_verify_test.cpp  crypto_ecc_sign_test.cpp  crypto_ecc_verify_test.cpp  crypto_ed25519_asy_key_generator_by_spec_test.cpp  crypto_ed25519_asy_key_generator_test.cpp  crypto_ed25519_sign_test.cpp  crypto_ed25519_verify_test.cpp  crypto_get_key_size_test.cpp  crypto_hkdf_test.cpp  crypto_kem_test.cpp  crypto_key_utils_test.cpp  (+58 more)
(+420 files in other folders)
