# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("crypto_framework_lib") {
  if (os_level == "standard") {
    deps = [
      "//base/security/crypto_framework/frameworks:crypto_framework_lib",
    ]
  }
}

group("crypto_openssl_plugin_lib") {
  if (os_level == "standard") {
    deps = [
      "//base/security/crypto_framework/plugin:crypto_openssl_plugin_lib",
    ]
  }
}

group("cryptoframework_napi") {
  if (os_level == "standard") {
    deps = [
      "//base/security/crypto_framework/frameworks:cryptoframework_napi",
    ]
  }
}

group("crypto_framework_test") {
  testonly = true
  if (os_level == "standard") {
    deps = [
      "//base/security/crypto_framework/test/unittest:crypto_framework_test",
    ]
  }
}
