# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("crypto_framework_lib") {
  if (os_level == "standard") {
    deps =
        [ "//base/security/crypto_framework/frameworks:crypto_framework_lib" ]
  }
}

group("crypto_openssl_plugin_lib") {
  if (os_level == "standard") {
    deps =
        [ "//base/security/crypto_framework/plugin:crypto_openssl_plugin_lib" ]
  }
}

group("cryptoframework_napi") {
  if (os_level == "standard") {
    deps = [
      "//base/security/crypto_framework/frameworks/js/napi/certificate:cert_napi",
      "//base/security/crypto_framework/frameworks/js/napi/crypto:cryptoframework_napi",
    ]
  }
}

group("crypto_framework_test") {
  testonly = true
  if (os_level == "standard") {
    deps = [
      "//base/security/crypto_framework/test/unittest:crypto_framework_test",
    ]
  }
}

group("crypto_framework_fuzztest") {
  testonly = true
  deps = []
  if (os_level == "standard") {
    deps += [
      "test/fuzztest/certificate/x509certificate_fuzzer:fuzztest",
      "test/fuzztest/certificate/x509crl_fuzzer:fuzztest",
      "test/fuzztest/crypto_operation/hcfciphercreate_fuzzer:fuzztest",
      "test/fuzztest/crypto_operation/hcfkeyagreementcreate_fuzzer:fuzztest",
      "test/fuzztest/crypto_operation/hcfmaccreate_fuzzer:fuzztest",
      "test/fuzztest/crypto_operation/hcfmdcreate_fuzzer:fuzztest",
      "test/fuzztest/crypto_operation/hcfsigncreate_fuzzer:fuzztest",
      "test/fuzztest/crypto_operation/hcfverifycreate_fuzzer:fuzztest",
      "test/fuzztest/key/asykeygenerator_fuzzer:fuzztest",
      "test/fuzztest/key/symkeygenerator_fuzzer:fuzztest",
      "test/fuzztest/rand/hcfrandcreate_fuzzer:fuzztest",
    ]
  }
}
