# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//base/security/crypto_framework/common/common.gni")

ohos_static_library("crypto_plugin_common") {
    subsystem_name = "security"
    part_name = "crypto_framework"
    include_dirs = [
      "//utils/native/base/include",
      "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    ]
    include_dirs += crypto_framwork_common_inc_path

    sources = crypto_framwork_common_files

    defines = [ "HILOG_ENABLE" ]
    cflags = [
      "-DHILOG_ENABLE",
      "-fPIC",
      "-Wall",
    ]

    deps = [
      "//utils/native/base:utils",
    ]

    external_deps = [
    "hiviewdfx_hilog_native:libhilog",
  ]
}
