# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

crypto_framwork_common_inc_path = [
  "//base/security/crypto_framework/interfaces/innerkits/common",
  "//base/security/crypto_framework/common/inc",
]

framework_common_util_files = [
  "//base/security/crypto_framework/common/src/blob.c",
  "//base/security/crypto_framework/common/src/utils.c",
  "//base/security/crypto_framework/common/src/log.c",
  "//base/security/crypto_framework/common/src/memory.c",
  "//base/security/crypto_framework/common/src/hcf_parcel.c",
  "//base/security/crypto_framework/common/src/hcf_string.c",
  "//base/security/crypto_framework/common/src/params_parser.c",
  "//base/security/crypto_framework/common/src/object_base.c",
]

crypto_framwork_common_files = framework_common_util_files
