# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/crypto_framework/common/common.gni")
import("//base/security/crypto_framework/frameworks/frameworks.gni")
import("//build/ohos.gni")

config("framework_config") {
  include_dirs = [
    "//base/security/crypto_framework/interfaces/innerkits/algorithm_parameter",
    "//base/security/crypto_framework/interfaces/innerkits/certificate",
    "//base/security/crypto_framework/interfaces/innerkits/common",
    "//base/security/crypto_framework/interfaces/innerkits/crypto_operation",
    "//base/security/crypto_framework/interfaces/innerkits/key",
    "//base/security/crypto_framework/interfaces/innerkits/rand",
  ]
}

ohos_shared_library("crypto_framework_lib") {
  subsystem_name = "security"
  part_name = "crypto_framework"
  public_configs = [ ":framework_config" ]
  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
  ]
  include_dirs += framework_inc_path + crypto_framwork_common_inc_path

  sources = framework_files

  if (os_level == "standard") {
    sanitize = {
      cfi = true
      debug = false
      blocklist = "//base/security/crypto_framework/cfi_blocklist.txt"
    }
  }

  cflags = [
    "-DHILOG_ENABLE",
    "-fPIC",
    "-Wall",
  ]

  deps = [
    "//base/security/crypto_framework:crypto_openssl_plugin_lib",
    "//base/security/crypto_framework/common:crypto_plugin_common",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

ohos_shared_library("cryptoframework_napi") {
  subsystem_name = "security"
  part_name = "crypto_framework"
  relative_install_dir = "module/security"
  include_dirs = [
    "//base/security/crypto_framework/interfaces/kits/js",
    "//third_party/bounds_checking_function/include",
    "//commonlibrary/c_utils/base/include",
    "//base/security/crypto_framework/frameworks/js/napi/inc",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
  ]
  include_dirs += framework_inc_path

  if (os_level == "standard") {
    sanitize = {
      cfi = true
      debug = false
      blocklist = "//base/security/crypto_framework/cfi_blocklist.txt"
    }
  }

  cflags = [
    "-DHILOG_ENABLE",
    "-fPIC",
    "-g3",
  ]

  sources = [
    "js/napi/src/napi_asy_key_generator.cpp",
    "js/napi/src/napi_cert_chain_validator.cpp",
    "js/napi/src/napi_cipher.cpp",
    "js/napi/src/napi_init.cpp",
    "js/napi/src/napi_key.cpp",
    "js/napi/src/napi_key_agreement.cpp",
    "js/napi/src/napi_key_pair.cpp",
    "js/napi/src/napi_mac.cpp",
    "js/napi/src/napi_md.cpp",
    "js/napi/src/napi_pri_key.cpp",
    "js/napi/src/napi_pub_key.cpp",
    "js/napi/src/napi_rand.cpp",
    "js/napi/src/napi_sign.cpp",
    "js/napi/src/napi_sym_key.cpp",
    "js/napi/src/napi_sym_key_generator.cpp",
    "js/napi/src/napi_utils.cpp",
    "js/napi/src/napi_verify.cpp",
    "js/napi/src/napi_x509_certificate.cpp",
    "js/napi/src/napi_x509_crl.cpp",
    "js/napi/src/napi_x509_crl_entry.cpp",
  ]

  deps = [
    "//base/security/crypto_framework/frameworks:crypto_framework_lib",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "napi:ace_napi",
  ]
}
