# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_path = "//base/security/crypto_framework"
framework_path = "//base/security/crypto_framework/frameworks"
plugin_path = "//base/security/crypto_framework/plugin"

framework_inc_path = [
  "${base_path}/interfaces/innerkits/algorithm_parameter",
  "${base_path}/interfaces/innerkits/certificate",
  "${base_path}/interfaces/innerkits/common",
  "${base_path}/interfaces/innerkits/crypto_operation",
  "${base_path}/interfaces/innerkits/key",
  "${base_path}/interfaces/innerkits/rand",
  "${base_path}/common/inc",
  "${plugin_path}/openssl_plugin/aes/inc",
  "${plugin_path}/openssl_plugin/certificate/inc",
  "${plugin_path}/openssl_plugin/crypto_operation/key_agreement/inc",
  "${plugin_path}/openssl_plugin/crypto_operation/signature/inc",
  "${plugin_path}/openssl_plugin/crypto_operation/aes/inc",
  "${plugin_path}/openssl_plugin/key/sym_key_generator/inc",
  "${plugin_path}/openssl_plugin/key/asy_key_generator/inc",
  "${plugin_path}/openssl_plugin/certificate/inc",
  "${plugin_path}/openssl_plugin/crypto_operation/hmac/inc",
  "${plugin_path}/openssl_plugin/crypto_operation/md/inc",
  "${plugin_path}/openssl_plugin/crypto_operation/rsa/inc",
  "${plugin_path}/openssl_plugin/rand/inc",
  "${framework_path}/spi",
]

framework_certificate_files = [
  "${framework_path}/certificate/cert_chain_validator.c",
  "${framework_path}/certificate/x509_certificate.c",
  "${framework_path}/certificate/x509_crl.c",
]

framework_cipher_files = [ "${framework_path}/crypto_operation/cipher.c" ]

framework_signature_files = [ "${framework_path}/crypto_operation/signature.c" ]

framework_key_agreement_files =
    [ "${framework_path}/crypto_operation/key_agreement.c" ]

framework_key_files = [
  "${framework_path}/key/asy_key_generator.c",
  "${framework_path}/key/sym_key_generator.c",
]

framework_mac_files = [ "${framework_path}/crypto_operation/mac.c" ]

framework_rand_files = [ "${framework_path}/rand/rand.c" ]

framework_md_files = [ "${framework_path}/crypto_operation/md.c" ]

framework_files =
    framework_certificate_files + framework_key_agreement_files +
    framework_signature_files + framework_cipher_files + framework_key_files +
    framework_mac_files + framework_rand_files + framework_md_files
