# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_path = "//base/security/crypto_framework"

plugin_path = "//base/security/crypto_framework/plugin"

plugin_inc_path = [
  "${base_path}/interfaces/innerkits/common",
  "${plugin_path}/openssl_plugin/certificate/inc",
  "${plugin_path}/openssl_plugin/common/inc",
  "${plugin_path}/openssl_plugin/key/asy_key_generator/inc",
  "${plugin_path}/openssl_plugin/key/sym_key_generator/inc",
  "${plugin_path}/openssl_plugin/crypto_operation/aes/inc",
  "${plugin_path}/openssl_plugin/crypto_operation/hmac/inc",
  "${plugin_path}/openssl_plugin/crypto_operation/key_agreement/inc",
  "${plugin_path}/openssl_plugin/crypto_operation/signature/inc",
  "${plugin_path}/openssl_plugin/crypto_operation/md/inc",
  "${plugin_path}/openssl_plugin/crypto_operation/rsa/inc",
  "${plugin_path}/openssl_plugin/rand/inc",
  "//base/security/crypto_framework/frameworks/spi",
  "//base/security/crypto_framework/common/inc",
]

plugin_signature_files = [
  "${plugin_path}/openssl_plugin/crypto_operation/signature/src/ecdsa_openssl.c",
  "${plugin_path}/openssl_plugin/crypto_operation/signature/src/signature_rsa_openssl.c",
]

plugin_common_files = [
  "${plugin_path}/openssl_plugin/common/src/openssl_common.c",
  "${plugin_path}/openssl_plugin/common/src/rsa_openssl_common.c",
]

plugin_asy_key_generator_files = [
  "${plugin_path}/openssl_plugin/key/asy_key_generator/src/ecc_asy_key_generator_openssl.c",
  "${plugin_path}/openssl_plugin/key/asy_key_generator/src/rsa_asy_key_generator_openssl.c",
]

plugin_key_agreement_files = [ "${plugin_path}/openssl_plugin/crypto_operation/key_agreement/src/ecdh_openssl.c" ]

plugin_certificate_files = [
  "${plugin_path}/openssl_plugin/certificate/src/x509_cert_chain_validator_openssl.c",
  "${plugin_path}/openssl_plugin/certificate/src/x509_certificate_openssl.c",
  "${plugin_path}/openssl_plugin/certificate/src/x509_crl_openssl.c",
  "${plugin_path}/openssl_plugin/certificate/src/x509_crl_entry_openssl.c",
]

plugin_sym_key_files = [
  "${plugin_path}/openssl_plugin/key/sym_key_generator/src/sym_key_openssl.c",
]

plugin_cipher_files = [
  "${plugin_path}/openssl_plugin/crypto_operation/rsa/src/cipher_rsa_openssl.c",
  "${plugin_path}/openssl_plugin/crypto_operation/aes/src/cipher_3des_openssl.c",
  "${plugin_path}/openssl_plugin/crypto_operation/aes/src/cipher_aes_openssl.c",
  "${plugin_path}/openssl_plugin/crypto_operation/aes/src/cipher_aes_common.c",
]

plugin_hmac_files =
    [ "${plugin_path}/openssl_plugin/crypto_operation/hmac/src/mac_openssl.c" ]

plugin_rand_files = [ "${plugin_path}/openssl_plugin/rand/src/rand_openssl.c" ]

plugin_md_files =
    [ "${plugin_path}/openssl_plugin/crypto_operation/md/src/md_openssl.c" ]

plugin_files = plugin_certificate_files + plugin_asy_key_generator_files +
               plugin_key_agreement_files + plugin_sym_key_files +
               plugin_cipher_files + plugin_hmac_files + plugin_rand_files +
               plugin_md_files + plugin_signature_files + plugin_common_files
